--- a/lib/header/h-2/index.pug
+++ b/lib/header/h-2/index.pug
@@ -1,7 +1,7 @@
-header.canhcam-header-2
+header.canhcam-header-2.has-tranparent
 	nav.navbar.navbar-expand-lg.container
-		a.navbar-brand(href='#')
-			img(src="./img/logo2.png", alt="Logo")
+		a.navbar-brand(href='#slider')
+			img(src="./img/logo1.png", alt="Logo")
 		button.navbar-toggler(type='button', data-toggle='collapse', data-target='#CCMenuHeader', aria-controls='CCMenuHeader', aria-expanded='false', aria-label='Toggle navigation')
 			span.fa.fa-bars
 		#CCMenuHeader.collapse.navbar-collapse
