--- a/lib/tabs/t-1/index.pug
+++ b/lib/tabs/t-1/index.pug
@@ -4,7 +4,7 @@ section.canhcam-tabs-1#work
 	.container
 		h2 Some of our work
 		ul#ccTabs.nav(role="tablist")
-			li.nav-item
+			li.nav-item.active
 				a#cct-01-tab.nav-link(data-toggle="tab" href="#cct-01" role="tab" aria-controls="cct-01" aria-selected="true")
 					span All
 			li.nav-item
@@ -20,66 +20,127 @@ section.canhcam-tabs-1#work
 				a#cct-05-tab.nav-link(data-toggle="tab" href="#cct-05" role="tab" aria-controls="cct-05" aria-selected="false")
 					span Illustration
 		#ccTabsContent.tab-content
-					#cct-01.tab-pane.fade(role="tabpanel" aria-labelledby="cct-01-tab")
-						.row
-							.col-md-4.col-sm-6
-								a(href="#")
-									figure
-										.box-img
-											img.img-fluid(src="./img/tabs/tabs_product_3.png", alt="")
-											figcaption.caption_img
-												h3 Mobile UI
-												p Google Mail
-												span.hr
+			#cct-01.tab-pane.fade(role="tabpanel" aria-labelledby="cct-01-tab")
+				.row
+					.col-md-4.col-sm-6
+						a(href="#")
+							figure
+								.box-img
+									img.img-fluid(src="./img/tabs/tabs_product_3.png", alt="")
+									figcaption.caption_img
+										h3 Mobile UI
+										p Google Mail
+										span.hr
 
-							.col-md-4.col-sm-6
-								a(href="#")
-									figure
-										.box-img
-											img.img-fluid(src="./img/tabs/tabs_product_8.png", alt="")
-											figcaption.caption_img
-												h3 Mobile UI
-												p Google Mail
-												span.hr
+					.col-md-4.col-sm-6
+						a(href="#")
+							figure
+								.box-img
+									img.img-fluid(src="./img/tabs/tabs_product_8.png", alt="")
+									figcaption.caption_img
+										h3 Mobile UI
+										p Google Mail
+										span.hr
 
-							.col-md-4.col-sm-6
-								a(href="#")
-									figure
-										.box-img
-											img.img-fluid(src="./img/tabs/tabs_product_4.png", alt="")
-											figcaption.caption_img
-												h3 Mobile UI
-												p Google Mail
-												span.hr
+					.col-md-4.col-sm-6
+						a(href="#")
+							figure
+								.box-img
+									img.img-fluid(src="./img/tabs/tabs_product_4.png", alt="")
+									figcaption.caption_img
+										h3 Mobile UI
+										p Google Mail
+										span.hr
 
-							.col-md-4.col-sm-6
-								a(href="#")
-									figure
-										.box-img
-											img.img-fluid(src="./img/tabs/tabs_product_2.png", alt="")
-											figcaption.caption_img
-												h3 Mobile UI
-												p Google Mail
-												span.hr
+					.col-md-4.col-sm-6
+						a(href="#")
+							figure
+								.box-img
+									img.img-fluid(src="./img/tabs/tabs_product_2.png", alt="")
+									figcaption.caption_img
+										h3 Mobile UI
+										p Google Mail
+										span.hr
 
-							.col-md-4.col-sm-6
-								a(href="#")
-									figure
-										.box-img
-											img.img-fluid(src="./img/tabs/tabs_product_7.png", alt="")
-											figcaption.caption_img
-												h3 Mobile UI
-												p Google Mail
-												span.hr
+					.col-md-4.col-sm-6
+						a(href="#")
+							figure
+								.box-img
+									img.img-fluid(src="./img/tabs/tabs_product_7.png", alt="")
+									figcaption.caption_img
+										h3 Mobile UI
+										p Google Mail
+										span.hr
 
-							.col-md-4.col-sm-6
-								a(href="#")
-									figure
-										.box-img
-											img.img-fluid(src="./img/tabs/tabs_product_9.png", alt="")
-											figcaption.caption_img
-												h3 Mobile UI
-												p Google Mail
-												span.hr
+					.col-md-4.col-sm-6
+						a(href="#")
+							figure
+								.box-img
+									img.img-fluid(src="./img/tabs/tabs_product_9.png", alt="")
+									figcaption.caption_img
+										h3 Mobile UI
+										p Google Mail
+										span.hr
+			#cct-02.tab-pane.fade(role="tabpanel" aria-labelledby="cct-02-tab")
+				.row
+					.col-md-4.col-sm-6
+						a(href="#")
+							figure
+								.box-img
+									img.img-fluid(src="./img/tabs/tabs_product_8.png", alt="")
+									figcaption.caption_img
+										h3 Mobile UI
+										p Google Mail
+										span.hr
+
+					.col-md-4.col-sm-6
+						a(href="#")
+							figure
+								.box-img
+									img.img-fluid(src="./img/tabs/tabs_product_3.png", alt="")
+									figcaption.caption_img
+										h3 Mobile UI
+										p Google Mail
+										span.hr
+
+					.col-md-4.col-sm-6
+						a(href="#")
+							figure
+								.box-img
+									img.img-fluid(src="./img/tabs/tabs_product_4.png", alt="")
+									figcaption.caption_img
+										h3 Mobile UI
+										p Google Mail
+										span.hr
+
+					.col-md-4.col-sm-6
+						a(href="#")
+							figure
+								.box-img
+									img.img-fluid(src="./img/tabs/tabs_product_2.png", alt="")
+									figcaption.caption_img
+										h3 Mobile UI
+										p Google Mail
+										span.hr
+
+					.col-md-4.col-sm-6
+						a(href="#")
+							figure
+								.box-img
+									img.img-fluid(src="./img/tabs/tabs_product_7.png", alt="")
+									figcaption.caption_img
+										h3 Mobile UI
+										p Google Mail
+										span.hr
+
+					.col-md-4.col-sm-6
+						a(href="#")
+							figure
+								.box-img
+									img.img-fluid(src="./img/tabs/tabs_product_9.png", alt="")
+									figcaption.caption_img
+										h3 Mobile UI
+										p Google Mail
+										span.hr
 
 		button.btn-show Show me more
