--- a/lib/_core/index.sass
+++ b/lib/_core/index.sass
@@ -16,7 +16,7 @@ h1, h2, h3, h4, h5, h6
 	font-size: initial
 
 a
-	color: color-get($mau,main)
+	color: color-get($mau,trang)
 	&:hover
 		color: color-get($mau,extra)
 	&:visited, &:active
